@@ -1,3 +1,15 @@
+2009-07-02  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes: NB#123987 - Fix plural localization of notification time
+
+	* src/hd-incoming-event-window.c
+	  (hd_incoming_event_window_update_time): Use ngettext for plural
+	  translations.
+
+	* src/test-notifications.py (emit_notification): update test.
+
+	* debian/changelog: Update.
+
 2009-07-01  Aapo Kojo <aapo.kojo@nokia.com>
 
 	Released 0.3.37
